// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`created user should NOT be active 1`] = `
Object {
  "active": false,
  "cabinet": null,
  "created_at": Any<Object>,
  "email": "toto@toto.com",
  "id": 11,
  "last_login": null,
  "nom": "testAd",
  "password": Any<String>,
  "prenom": "testPrenom",
  "reset_password_expires": null,
  "reset_password_token": null,
  "type": "individuel",
  "username": "toto",
}
`;

exports[`should add mandataire tis 1`] = `
Object {
  "success": true,
}
`;

exports[`should add mandataire tis 2`] = `
Array [
  Object {
    "from": "ne-pas-repondre@emjpm.gouv.fr",
    "html": "
Bonjour la super team eMJPM :),<br />
Nous avons reçu une nouvelle inscription de testPrenom testAd , toto@toto.com , 75010, <br />

agrée sur TI(s): ti arras, ti paris. <br />

Merci de vérifier cette nouvelle demande et de la valider.
<br /><br />
Bonne journée :)
",
    "subject": "Nouvelle inscription",
    "text": "
Bonjour la super team emjpm :) ,

Nous avons reçu une nouvelle inscription de testPrenom testAd , toto@toto.com , 75010,
agrée sur TI: ti arras, ti paris / qui exerce sur TI: ti arras, ti paris.

agrée sur TI(s): ti arras, ti paris.

Merci de vérifier cette nouvelle demande et de la valider.

Bonne journée :)
",
    "to": "contact@emjpm.beta.gouv.fr",
  },
]
`;

exports[`should add user tis 2`] = `
Array [
  Object {
    "from": "ne-pas-repondre@emjpm.gouv.fr",
    "html": "
Bonjour la super team eMJPM :),<br />
Nous avons reçu une nouvelle inscription de testPrenom testAd , toto@toto.com , 75010, <br />

qui exerce sur le TI: ti arras. <br />

Merci de vérifier cette nouvelle demande et de la valider.
<br /><br />
Bonne journée :)
",
    "subject": "Nouvelle inscription",
    "text": "
Bonjour la super team emjpm :) ,

Nous avons reçu une nouvelle inscription de testPrenom testAd , toto@toto.com , 75010,
agrée sur TI: ti arras / qui exerce sur TI: ti arras.

qui exerce sur le TI: ti arras.

Merci de vérifier cette nouvelle demande et de la valider.

Bonne journée :)
",
    "to": "contact@emjpm.beta.gouv.fr",
  },
]
`;

exports[`should send an email with good values 1`] = `
Array [
  Object {
    "from": "ne-pas-repondre@emjpm.gouv.fr",
    "html": "
Bonjour la super team eMJPM :),<br />
Nous avons reçu une nouvelle inscription de testPrenom testAd , toto@toto.com , 75010, <br />

agrée sur TI(s): Pas de Ti sélectionné. <br />

Merci de vérifier cette nouvelle demande et de la valider.
<br /><br />
Bonne journée :)
",
    "subject": "Nouvelle inscription",
    "text": "
Bonjour la super team emjpm :) ,

Nous avons reçu une nouvelle inscription de testPrenom testAd , toto@toto.com , 75010,
agrée sur TI: undefined / qui exerce sur TI: undefined.

agrée sur TI(s): Pas de Ti sélectionné.

Merci de vérifier cette nouvelle demande et de la valider.

Bonne journée :)
",
    "to": "contact@emjpm.beta.gouv.fr",
  },
]
`;
